# lecture-master

./: .env  .env.example  .eslintrc.js  .example.env  .gitignore  .prettierignore  .prettierrc  1.html  README.md  _ide_helper.php  activate.sh  app.js  authMiddleware.ts  bun.lockb  composer.json  credentials.json  db.json  db.sqlite.example  delete.php  demo  docker-compose.yml  ecosystem.config.js  ex.txt  helloC.sln  index.html  index.php  index.ts  insert.php  load_sample.sqlite  logout.php  main.http  mikro-orm.config.ts  new-lesson.php  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  pubspec.yaml  rawdata.csv  (+14 more)
manual2/: Cargo.toml  exercise.md
manual2/src/: lib.rs  main.rs
manual2/src/arc/: check.rs  mod.rs
manual2/src/boxy/: check.rs  err.rs  with_trait.rs
manual2/src/cell/: check.rs  mod.rs  mutex.rs  rwlock.rs
manual2/src/channels/: check.rs  mod.rs
manual2/src/closures/: basic.rs  complicated.rs  cycle.rs  func_type.rs  mod.rs  pick.rs  relref.rs
manual2/src/closures2/: check.rs  mod.rs
manual2/src/cow/: mean.rs  mod.rs
manual2/src/dbg/: check.rs  inspect.rs  mod.rs
manual2/src/deco/: check.rs  mod.rs
manual2/src/generics/: mean.rs  mod.rs
manual2/src/life/: check.rs
manual2/src/macros/: check.rs  make_f.rs  mod.rs  write.rs
manual2/src/modules/: check.rs  ext.rs  mod.rs
manual2/src/pat/: check.rs  mod.rs
manual2/src/rc/: check.rs  mod.rs
manual2/src/standard/: check.rs  mod.rs
manual2/src/template/: check.rs
manual2/src/test/: check.rs
manual2/src/testing/: check.rs  mod.rs  tdd.rs
(+3195 files in other folders)
