[package]
name = "common_known"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
strum = "0.23.0"
strum_macros = "0.23.1"
